# anyakrakusuma

./: LICENSE  README.md  pyproject.toml
configs/: case1_circle_to_circle.txt  case2_spiral_to_gaussian.txt  case3_moons_to_moons.txt  case4_lissajous_to_trefoil.txt
src/anyakrakusuma_eot/: __init__.py  cli.py
src/anyakrakusuma_eot/core/: __init__.py  distributions.py  solver.py
src/anyakrakusuma_eot/io/: __init__.py  config_manager.py  data_handler.py
src/anyakrakusuma_eot/utils/: __init__.py  logger.py  timer.py
src/anyakrakusuma_eot/visualization/: __init__.py  animator.py
tests/: __init__.py  test_distributions.py  test_solver.py
