[tool.poetry]
name = "anyakrakusuma"
version = "0.0.1"
description = "2D Schrödinger Bridge Solver via Entropic Optimal Transport with Log-Domain Sinkhorn"
authors = [
    "Sandy H. S. Herho",
    "Faiz R. Fajary",
    "Nurjanna J. Trilaksono",
    "Rusmawan Suwarman",
    "Dasapta E. Irawan"
]
license = "MIT"
readme = "README.md"
packages = [{include = "anyakrakusuma_eot", from = "src"}]
keywords = ["optimal-transport", "schrodinger-bridge", "sinkhorn", "entropic-regularization", "computational-physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"
pandas = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=3.0.0"
black = ">=22.0.0"

[tool.poetry.scripts]
anyakrakusuma = "anyakrakusuma_eot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
